--- a/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
+++ b/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
@@ -1,90 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="60" id="KGk-i7-Jjw" customClass="MessageTableCell" customModule="ChatApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="60" id="KGk-i7-Jjw" customClass="MessageTableCell" customModule="ChatApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iGd-jO-Ec5">
-                        <rect key="frame" x="348" y="45" width="45" height="18"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yMi-5K-801">
+                        <rect key="frame" x="0.0" y="6" width="393" height="32"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="036-3s-hI6">
-                                <rect key="frame" x="0.0" y="0.0" width="30" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                                <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="7KR-ts-eeL">
-                                <rect key="frame" x="30" y="0.0" width="15" height="15"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eDD-RL-4XN">
+                                <rect key="frame" x="0.0" y="14" width="45" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="sFq-qf-1k0">
+                                        <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMq-Xp-yeF">
+                                        <rect key="frame" x="15" y="-1.6666666666666679" width="30" height="19.666666666666668"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="xHa-wu-cuP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                        <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="hP1-00-E7S"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ooV-9Y-KHK">
+                                <rect key="frame" x="53" y="0.0" width="287" height="32"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iga-af-mlc">
+                                        <rect key="frame" x="8" y="8" width="271" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="iga-af-mlc" secondAttribute="trailing" constant="8" id="4wW-eI-r2l"/>
+                                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" constant="8" id="LBk-d2-gUX"/>
+                                    <constraint firstItem="iga-af-mlc" firstAttribute="leading" secondItem="ooV-9Y-KHK" secondAttribute="leading" constant="8" id="TNJ-tr-HLY"/>
+                                    <constraint firstItem="iga-af-mlc" firstAttribute="top" secondItem="ooV-9Y-KHK" secondAttribute="top" constant="8" id="xaT-7L-uYV"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iGd-jO-Ec5">
+                                <rect key="frame" x="348" y="14" width="45" height="18"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="036-3s-hI6">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="BkM-m0-Tsc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                        <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="7KR-ts-eeL">
+                                        <rect key="frame" x="30" y="0.0" width="15" height="15"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="mUl-fI-c2I"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                    </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iga-af-mlc">
-                        <rect key="frame" x="60" y="0.0" width="285" height="63"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="63" id="1Fn-ws-z0g"/>
-                            <constraint firstAttribute="width" constant="285" id="Rt8-uw-Qsw"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eDD-RL-4XN">
-                        <rect key="frame" x="0.0" y="45" width="47" height="18"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="sFq-qf-1k0">
-                                <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zZ0-IG-Iyt">
-                                <rect key="frame" x="17" y="0.0" width="30" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                                <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="eDD-RL-4XN" secondAttribute="bottom" id="AHq-Uw-BsD"/>
-                    <constraint firstAttribute="trailing" secondItem="iGd-jO-Ec5" secondAttribute="trailing" id="Beh-9k-M88"/>
-                    <constraint firstItem="iga-af-mlc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="Pcy-iA-hS0"/>
-                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="PrB-tp-bIn"/>
-                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="WFK-um-Mr3"/>
-                    <constraint firstItem="iGd-jO-Ec5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="45" id="f3C-zT-xPP"/>
-                    <constraint firstItem="eDD-RL-4XN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="45" id="h7x-44-vD5"/>
-                    <constraint firstItem="eDD-RL-4XN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="v50-oN-F5f"/>
-                    <constraint firstItem="iga-af-mlc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="wWS-49-w6i"/>
-                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="y9w-5q-Px2"/>
+                    <constraint firstAttribute="bottom" secondItem="yMi-5K-801" secondAttribute="bottom" constant="6" id="3Ai-6Z-aYY"/>
+                    <constraint firstItem="yMi-5K-801" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="E8m-za-URY"/>
+                    <constraint firstItem="yMi-5K-801" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ZDY-8e-Nc2"/>
+                    <constraint firstAttribute="trailing" secondItem="yMi-5K-801" secondAttribute="trailing" id="bUP-gk-DjE"/>
+                    <constraint firstItem="yMi-5K-801" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="vEi-QX-XUs"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="leadingConstraint" destination="E8m-za-URY" id="dvD-jA-BZ4"/>
                 <outlet property="leftTimeLabel" destination="036-3s-hI6" id="51T-0Q-3ec"/>
-                <outlet property="leftView" destination="iGd-jO-Ec5" id="jkl-Bm-WVH"/>
+                <outlet property="leftView" destination="eDD-RL-4XN" id="2n5-XC-abg"/>
                 <outlet property="leftimageView" destination="7KR-ts-eeL" id="kQb-qd-tWq"/>
                 <outlet property="messageLabel" destination="iga-af-mlc" id="W4r-Sx-huu"/>
-                <outlet property="rightTimeLabel" destination="zZ0-IG-Iyt" id="z4U-ya-7u7"/>
-                <outlet property="rightView" destination="eDD-RL-4XN" id="elv-bm-iuS"/>
+                <outlet property="messageView" destination="ooV-9Y-KHK" id="Wk2-0n-POk"/>
+                <outlet property="rightView" destination="iGd-jO-Ec5" id="MU1-No-SGB"/>
                 <outlet property="rightimageView" destination="sFq-qf-1k0" id="piI-QY-0uJ"/>
+                <outlet property="trailingConstraint" destination="bUP-gk-DjE" id="PbP-eU-Jfi"/>
             </connections>
             <point key="canvasLocation" x="-22.137404580152669" y="25.35211267605634"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="sun.horizon.fill" catalog="system" width="128" height="79"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
